--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,22 +6,22 @@
   border-bottom: 2px solid #aaa;
 }
 
-h1 {
+header h1 {
   margin: 0;
   padding: 0;
 }
 
-ul {
+header ul {
   list-style-type: none;
   display: flex;
 }
 
-li a {
+header li a {
   margin-right: 2em;
   text-decoration: none;
   color: black;
 }
 
-li a:hover {
+header li a:hover {
   color: blue;
 }
