--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,5 +1,10 @@
-html, body, main {
+html, body, main, * {
   margin: 0;
   padding: 0;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+div main {
+  max-width: 1440px;
+  margin: 0 auto;
 }
