--- a/src/styles/pageTitle.css
+++ b/src/styles/pageTitle.css
@@ -1,5 +1,6 @@
 .pageTitle {
+  font-family: 'Roboto-Black', Arial, Helvetica, sans-serif;
   margin-top: 1em;
   margin-bottom: 3em;
-  font-size: 4em;
+  font-size: 5em;
 }
