--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,21 +4,33 @@ footer {
   justify-content: center;
   align-items: center;
   margin-top: 3em;
-  padding: 5em;
-  background-color: #eee;
+  padding-top: 15em;
+  padding-bottom: 15em;
+  background-color: black;
 }
 
 footer ul {
   list-style-type: none;
   display: flex;
+  margin-bottom: 5em;
 }
 
 footer li a {
   text-decoration: none;
-  color: black;
-  margin: 0.5em;
+  padding: 0.5em 1em 0.5em 1em;
+  font-size: 1.25em;
+  font-family: 'Roboto-Bold';
+  color: white;
+  border-radius: 1em;
 }
 
 footer li a:hover {
-  color: blue;
+  background-color: #333;
+}
+
+footer p {
+  color: white;
+  font-size: 0.75em;
+  font-family: 'Roboto-Regular';
+  margin-bottom: 0.5em;
 }
