--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -7,6 +7,10 @@
   src: url(../fonts/Roboto/Roboto-Regular.ttf)
 }
 @font-face {
+  font-family: Roboto-Medium;
+  src: url(../fonts/Roboto/Roboto-Medium.ttf)
+}
+@font-face {
   font-family: Roboto-Bold;
   src: url(../fonts/Roboto/Roboto-Bold.ttf)
 }
@@ -19,6 +23,7 @@ html, body, main, * {
   margin: 0;
   padding: 0;
   font-family: 'Roboto-Regular', Arial, sans-serif;
+  color: black;
 }
 
 div main {
