--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -24,6 +24,7 @@ html, body, main, * {
   padding: 0;
   font-family: 'Roboto-Regular', Arial, sans-serif;
   color: black;
+  outline: none;
 }
 
 div main {
