--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -13,7 +13,7 @@ header h1 a {
   font-family: 'Roboto-Black';
   text-decoration: none;
   font-size: 0.75em;
-  color: #black
+  color: black;
 }
 
 header h1 a:hover {
