--- a/src/styles/bottomNav.css
+++ b/src/styles/bottomNav.css
@@ -11,3 +11,13 @@
   justify-content: space-around;
   align-items: center;
 }
+
+.navItem {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
