--- a/src/styles/bottomNav.css
+++ b/src/styles/bottomNav.css
@@ -1,9 +1,10 @@
 .bottomNav {
   visibility: hidden;
   position: fixed;
-  background-color: palegoldenrod;
+  background-color: rgb(248, 248, 248);
+  border-top: 1px solid #999;
   width: 100%;
-  height: 4em;
+  height: 6em;
   bottom: 0;
   right: 0;
   left: 0;
@@ -13,6 +14,7 @@
 }
 
 .navItem {
+  border-right: 1px solid #ddd;
   width: 100%;
   height: 100%;
   display: flex;
@@ -20,4 +22,14 @@
   align-items: center;
   justify-content: center;
   text-decoration: none;
+  font-size: 1.1em;
+  line-height: 1.5em;
+}
+
+.navItem:nth-of-type(3) {
+  border: none;
+}
+
+.navItem p {
+  font-family: 'Roboto-Bold';
 }
