--- a/src/styles/bottomNav.css
+++ b/src/styles/bottomNav.css
@@ -1,10 +1,10 @@
 .bottomNav {
   visibility: hidden;
   position: fixed;
-  background-color: rgb(248, 248, 248);
+  background-color: white;
   border-top: 1px solid #999;
   width: 100%;
-  height: 6em;
+  height: 4.5em;
   bottom: 0;
   right: 0;
   left: 0;
@@ -14,7 +14,6 @@
 }
 
 .navItem {
-  border-right: 1px solid #ddd;
   width: 100%;
   height: 100%;
   display: flex;
@@ -22,14 +21,10 @@
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  font-size: 1.1em;
-  line-height: 1.5em;
+  font-size: 1em;
 }
 
-.navItem:nth-of-type(3) {
-  border: none;
-}
-
-.navItem p {
-  font-family: 'Roboto-Bold';
+.navItem span {
+  color: #666;
+  font-family: 'Roboto-Regular';
 }
