--- a/src/styles/bottomNav.css
+++ b/src/styles/bottomNav.css
@@ -2,9 +2,9 @@
   visibility: hidden;
   position: fixed;
   background-color: white;
-  border-top: 1px solid #999;
+  border-top: 2px solid #eee;
   width: 100%;
-  height: 4.5em;
+  height: 5em;
   bottom: 0;
   right: 0;
   left: 0;
@@ -25,6 +25,6 @@
 }
 
 .navItem span {
-  color: #666;
+  color: black;
   font-family: 'Roboto-Regular';
 }
