--- a/src/styles/bottomNav.css
+++ b/src/styles/bottomNav.css
@@ -4,7 +4,7 @@
   background-color: white;
   border-top: 2px solid #eee;
   width: 100%;
-  height: 5em;
+  height: 5.5em;
   bottom: 0;
   right: 0;
   left: 0;
@@ -25,6 +25,7 @@
 }
 
 .navItem span {
-  color: black;
-  font-family: 'Roboto-Regular';
+  color: #666;
+  font-family: 'Roboto-Bold';
+  margin-top: 0.3em;
 }
