--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -29,13 +29,16 @@ html, body, main, * {
 
 body {
   font-size: 16px;
-  padding-left: 1.5em;
-  padding-right: 1.5em;
 }
 
 main {
   max-width: 1440px;
   margin: 0 auto;
+}
+
+main, header {
+  padding-left: 1.5em;
+  padding-right: 1.5em;
 }
 
 @media only screen and (max-width: 768px) {
