--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,7 @@
   background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
   padding: 1.25em 3em 1.25em 3em;
   font-family: 'Roboto-Bold';
-  font-size: 1em;
+  font-size: 16px;
   border-radius: 0.75em;
 }
 
