Put image above article on mobile

--- a/src/styles/workEntry.css
+++ b/src/styles/workEntry.css
@@ -58,7 +58,7 @@
 
 @media only screen and (max-width: 768px) {
   .workEntry {
-    display: block;
+    flex-direction: column-reverse !important;
   }
   .workEntryTextPanel {
     padding: 0 !important;
