--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -3,11 +3,10 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-top: 2px solid #ccc;
   margin-top: 6em;
   padding-top: 15em;
   padding-bottom: 15em;
-  background-color: #eee;
+  background-color: #3F3D56;
 }
 
 footer a {
@@ -18,7 +17,8 @@ footer a {
 }
 
 footer span {
-  font-family: 'Roboto-Medium';
+  font-family: 'Roboto-Regular';
+  color: white;
   font-size: 1em;
   margin-top: 0.5em;
 }
@@ -26,21 +26,20 @@ footer span {
 footer ul {
   list-style-type: none;
   display: flex;
-  margin-bottom: 5em;
 }
 
 footer li a {
   text-decoration: none;
-  padding: 0.5em 1em 0.5em 1em;
+  padding: 1em 1.5em 1em 1.5em;
   border-radius: 1em;
 }
 
 footer li a:hover {
-  background-color: #ddd;
+  background-color: #292838;
 }
 
 footer p {
-  color: black;
+  color: white;
   font-size: 0.75em;
   font-family: 'Roboto-Regular';
   margin: 0.75em;
