--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,27 @@
+.container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.textPanel {
+  flex: 3;
+}
+
+.imagePanel {
+  flex: 2;
+  align-self: flex-end;
+}
+
+.imagePanel img {
+  width: 100%;
+}
+
 .cta {
   margin-top: 1.5em;
   border: none;
   color: white;
-  background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+  background-color: #2575fc;
   padding: 1.25em 3em 1.25em 3em;
   font-family: 'Roboto-Bold';
   font-size: 16px;
@@ -19,4 +38,13 @@
   line-height: 1.5em;
   font-size: 1em;
   color: #333;
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+  .imagePanel {
+    margin-top: 3em;
+  }
 }
