--- a/src/styles/layout/bottomNav.scss
+++ b/src/styles/layout/bottomNav.scss
@@ -28,3 +28,10 @@
   font-family: 'Roboto-Medium';
   margin-top: 0.3em;
 }
+
+
+@media only screen and (max-width: 768px) {
+  .bottomNav {
+    visibility: visible;
+  }
+}
