--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,50 +1,51 @@
-.container {
+.indexContainer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-}
 
-.textPanel {
-  flex: 3;
-}
+  .textPanel {
+    flex: 3;
+  }
 
-.imagePanel {
-  flex: 2;
-  align-self: flex-end;
-}
+  .imagePanel {
+    flex: 2;
+    align-self: flex-end;
 
-.imagePanel img {
-  width: 100%;
-}
+    img {
+      width: 100%;
+    }
+  }
 
-.cta {
-  margin-top: 1.5em;
-  border: none;
-  color: white;
-  background-color: #2575fc;
-  padding: 1.25em 3em 1.25em 3em;
-  font-family: 'Roboto-Bold';
-  font-size: 16px;
-  border-radius: 0.75em;
-}
+  .cta {
+    margin-top: 1.5em;
+    border: none;
+    color: white;
+    background-color: #2575fc;
+    padding: 1.25em 3em 1.25em 3em;
+    font-family: 'Roboto-Bold';
+    font-size: 16px;
+    border-radius: 0.75em;
+  }
 
-.cta:hover {
-  cursor: pointer;
-}
+  .cta:hover {
+    cursor: pointer;
+  }
 
-.homeText {
-  margin-top: 5em;
-  max-width: 720px;
-  line-height: 1.5em;
-  font-size: 1em;
-  color: #333;
+  .homeText {
+    margin-top: 5em;
+    max-width: 720px;
+    line-height: 1.5em;
+    font-size: 1em;
+    color: #333;
+  }
 }
 
 @media only screen and (max-width: 768px) {
-  .container {
+  .indexContainer {
     flex-direction: column;
-  }
-  .imagePanel {
-    margin-top: 3em;
+
+    .imagePanel {
+      margin-top: 3em;
+    }
   }
 }
