--- a/src/styles/components/workEntry.scss
+++ b/src/styles/components/workEntry.scss
@@ -26,15 +26,15 @@
 }
 
 .workEntryTitle {
-  font-size: 2.5em;
+  font-size: 3em;
   font-family: 'Roboto-Bold';
 }
 
 .workEntrySubtitle {
   margin-top: 0.5em;
-  font-size: 1em;
-  font-family: 'Roboto-Medium';
-  color: #333;
+  font-size: 1.5em;
+  font-family: 'Roboto-Regular';
+  font-weight: normal;
 }
 
 .badges {
