--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,9 +8,11 @@
 
 @import 'pages/contact.scss';
 @import 'pages/index.scss';
+@import 'pages/work.scss';
 
 @import 'components/badge.scss';
 @import 'components/badges.scss';
 @import 'components/indexTitle.scss';
 @import 'components/pageTitle.scss';
+@import 'components/secondaryAction.scss';
 @import 'components/workEntry.scss';
