--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -19,12 +19,19 @@
   .cta {
     margin-top: 1.5em;
     border: none;
-    color: white;
     background-color: #2575fc;
-    padding: 1.25em 3em 1.25em 3em;
-    font-family: 'Roboto-Bold';
-    font-size: 16px;
+    padding: 2em 4em 2em 4em;
     border-radius: 0.75em;
+
+    * {
+      vertical-align: middle;
+    }
+
+    span {
+      color: white;
+      font-family: 'Roboto-Bold';
+      font-size: 1.5em;
+    }
   }
 
   .cta:hover {
