--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import 'layout/header.scss';
 @import 'layout/navItem.scss';
 
+@import 'pages/about.scss';
 @import 'pages/contact.scss';
 @import 'pages/index.scss';
 @import 'pages/work.scss';
