Modify about page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,3 +17,5 @@
 @import 'components/pageTitle.scss';
 @import 'components/secondaryAction.scss';
 @import 'components/workEntry.scss';
+
+@import 'elements/typography.scss';
