--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -41,9 +41,11 @@
   .homeText {
     margin-top: 5em;
     max-width: 720px;
-    line-height: 1.5em;
+    color: black;
     font-size: 1em;
-    color: #333;
+    font-family: 'Roboto-Regular';
+    line-height: 2em;
+    margin-bottom: 1em;
   }
 }
 
