Improve About page layout (slightly)

--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -1,10 +1,10 @@
 .aboutContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
 
   .textPanel {
     flex: 2;
-    padding-right: 4em;
+    padding-left: 4em;
 
     .seeMore {
 
