--- a/src/styles/elements/typography.scss
+++ b/src/styles/elements/typography.scss
@@ -4,6 +4,12 @@
   margin-bottom: 0.5em;
 }
 
+.heading2 {
+  font-size: 1.25em;
+  font-family: 'Roboto-Bold';
+  margin-bottom: 0.25em;
+}
+
 .paragraph {
   font-size: 1em;
   font-family: 'Roboto-Regular';
