--- a/src/styles/components/pageTitle.scss
+++ b/src/styles/components/pageTitle.scss
@@ -4,3 +4,9 @@
   margin-bottom: 2.5em;
   font-size: 5em;
 }
+
+@media only screen and (max-width: 768px) {
+  .pageTitle {
+    margin-bottom: 0.5em;
+  }
+}
