--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -28,5 +28,9 @@
 @media only screen and (max-width: 768px) {
   .aboutContainer {
     flex-direction: column-reverse;
+
+    .textPanel {
+      padding-left: 0;
+    }
   }
 }
