--- a/src/styles/layout/footer.scss
+++ b/src/styles/layout/footer.scss
@@ -26,16 +26,21 @@ footer span {
 footer ul {
   list-style-type: none;
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 footer li a {
   text-decoration: none;
-  padding: 1em 1.5em 1em 1.5em;
+  width: 8em;
+  height: 6em;
+  margin: 1em 0.5em 0em 0.5em;
   border-radius: 1em;
+  background-color: #292838;
 }
 
 footer li a:hover {
-  background-color: #292838;
+  box-shadow: inset 0px 0px 0px 1px white;
 }
 
 footer .paragraph {
