--- a/src/styles/components/workEntry.scss
+++ b/src/styles/components/workEntry.scss
@@ -35,8 +35,8 @@
   .workEntry {
     flex-direction: column-reverse !important;
 
-    .workEntryImage {
-      margin-bottom: 2.5em;
+    .workEntryImageContainer {
+      margin-bottom: 1em;
     }
     .workEntryTextPanel {
       padding: 0 !important;
