--- a/src/styles/layout/navItem.scss
+++ b/src/styles/layout/navItem.scss
@@ -1,5 +1,27 @@
+.navItem {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  font-size: 1em;
+}
+
+.navItem span {
+  font-family: 'Roboto-Medium';
+  margin-top: 0.3em;
+  color: #666;
+}
+
 .active {
-  color: #2575fc;
+  span {
+    color: $primary-color;
+  }
+  svg {
+    stroke: $primary-color;
+  }
 }
 
 .inactive {
