--- a/src/styles/components/pageTitle.scss
+++ b/src/styles/components/pageTitle.scss
@@ -7,6 +7,7 @@
 
 @media only screen and (max-width: 768px) {
   .pageTitle {
-    margin-bottom: 0.5em;
+    margin-bottom: 1.5em;
+    font-size: 3em;
   }
 }
