--- a/src/styles/elements/typography.scss
+++ b/src/styles/elements/typography.scss
@@ -16,3 +16,9 @@
   line-height: 2em;
   margin-bottom: 1em;
 }
+
+@media only screen and (max-width: 768px) {
+  .heading {
+    font-size: 2em;
+  }
+}
