--- a/src/styles/layout/navItem.scss
+++ b/src/styles/layout/navItem.scss
@@ -7,12 +7,13 @@
   justify-content: center;
   text-decoration: none;
   font-size: 1em;
-}
 
-.navItem span {
-  font-family: 'Roboto-Medium';
-  margin-top: 0.3em;
-  color: #666;
+  span {
+    font-family: 'Roboto-Medium';
+    margin-top: 0.3em;
+    margin-bottom: 0.1em;
+    color: #666;
+  }
 }
 
 .active {
