Switch to text tags

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 @import 'components/indexTitle.scss';
 @import 'components/pageTitle.scss';
 @import 'components/secondaryAction.scss';
+@import 'components/tags.scss';
 @import 'components/workEntry.scss';
 
 @import 'elements/typography.scss';
