Add custom not found page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import 'pages/contact.scss';
 @import 'pages/index.scss';
 @import 'pages/work.scss';
+@import 'pages/404.scss';
 
 @import 'components/badge.scss';
 @import 'components/badges.scss';
