--- a/src/styles/layout/navItem.scss
+++ b/src/styles/layout/navItem.scss
@@ -9,7 +9,7 @@
   font-size: 1em;
 
   span {
-    font-family: 'Roboto-Medium';
+    font-family: 'Roboto-Bold';
     margin-top: 0.3em;
     margin-bottom: 0.1em;
     color: #666;
