--- a/src/styles/elements/typography.scss
+++ b/src/styles/elements/typography.scss
@@ -1,6 +1,6 @@
 .heading {
   font-size: 2.5em;
-  font-family: 'Roboto-Bold';
+  font-family: 'Roboto-Black';
   margin-bottom: 0.5em;
 }
 
@@ -20,5 +20,13 @@
 @media only screen and (max-width: 768px) {
   .heading {
     font-size: 2em;
+  }
+
+  .heading2 {
+    font-size: 1.4em;
+  }
+
+  .paragraph {
+    font-size: 1.2em;
   }
 }
