--- a/src/styles/layout/bottomNav.scss
+++ b/src/styles/layout/bottomNav.scss
@@ -2,7 +2,8 @@
   visibility: hidden;
   position: fixed;
   background-color: white;
-  border-top: 2px solid #eee;
+  border-top: 1px solid #ccc;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 5.5em;
   bottom: 0;
