footer link font change

--- a/src/styles/layout/footer.scss
+++ b/src/styles/layout/footer.scss
@@ -17,7 +17,7 @@ footer a {
 }
 
 footer span {
-  font-family: 'Roboto-Regular';
+  font-family: 'Roboto-Medium';
   color: white;
   font-size: 1em;
   margin-top: 0.5em;
