--- a/src/styles/layout/footer.scss
+++ b/src/styles/layout/footer.scss
@@ -7,47 +7,58 @@ footer {
   padding-top: 15em;
   padding-bottom: 15em;
   background-color: #3F3D56;
-}
 
-footer a {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+  a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-footer span {
-  font-family: 'Roboto-Medium';
-  color: white;
-  font-size: 1em;
-  margin-top: 0.5em;
-}
+  span {
+    font-family: 'Roboto-Medium';
+    color: white;
+    font-size: 1em;
+    margin-top: 0.5em;
+  }
 
-footer ul {
-  list-style-type: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-}
+  ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 
-footer li a {
-  text-decoration: none;
-  width: 8em;
-  height: 6em;
-  margin: 1em 0.5em 0em 0.5em;
-  border-radius: 1em;
-  background-color: #292838;
-}
+  li {
 
-footer li a:hover {
-  box-shadow: inset 0px 0px 0px 1px white;
-}
+    a {
+      text-decoration: none;
+      width: 8em;
+      height: 6em;
+      margin: 1em 0.5em 0em 0.5em;
+      border-radius: 1em;
+      background-color: #292838;
+    }
 
-footer .paragraph {
-  margin-top: 6em;
-  text-align: center;
-  color: white;
-  font-family: 'Roboto-Light';
-  font-size: 0.75em;
+    a:hover {
+      box-shadow: inset 0px 0px 0px 1px white;
+    }
+  }
+
+  .paragraph {
+    margin-top: 6em;
+    text-align: center;
+    color: white;
+    font-family: 'Roboto-Light';
+    font-size: 0.75em;
+
+    a {
+      display: inline;
+      color: rgb(197, 234, 255);
+      font-family: 'Roboto-Medium';
+      text-decoration: none;
+      font-size: 1em;
+    }
+  }
 }
