--- a/src/styles/layout/layout.scss
+++ b/src/styles/layout/layout.scss
@@ -7,6 +7,10 @@
   src: url(../fonts/Roboto/Roboto-Regular.ttf)
 }
 @font-face {
+  font-family: Roboto-Italic;
+  src: url(../fonts/Roboto/Roboto-Italic.ttf)
+}
+@font-face {
   font-family: Roboto-Medium;
   src: url(../fonts/Roboto/Roboto-Medium.ttf)
 }
