--- a/src/styles/components/workEntry.scss
+++ b/src/styles/components/workEntry.scss
@@ -11,6 +11,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      margin-top: 1em;
 
       .date .paragraph {
         margin-bottom: 0;
@@ -18,7 +19,7 @@
         vertical-align: middle;
         line-height: normal;
         font-family: 'Roboto-Regular';
-        color: #666;
+        color: #333;
       }
     }
   }
