--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -19,7 +19,7 @@
   .cta {
     margin-top: 1em;
     border: none;
-    background-color: #2575fc;
+    background-color: $primary-color;
     padding: 2em 4em 2em 4em;
     border-radius: 1em;
     white-space: nowrap;
